--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'cursive';
+}
+
 body {
-    background-color: blue
+    background-color: rgb(188, 239, 255);
+    color: white;
+}
+
+#first-div {
+background-color: red;
 }
