--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'cursive';
+/* womp womp, font no work */
+    font-family: 'Cursive';
 }
 
 body {
