--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 
 
-{
+*{
     margin: 0;
     padding: 0;
-/* womp womp, font no work */
-    font-family: 'Cursive';
+ font-family: cursive;
 }
 
 body {
@@ -27,3 +26,66 @@ h1 {
   body {
     text-align: center;
   }
+
+  img.spin-image {
+    border-radius: 0%;
+    -webkit-transition: -webkit-transform .8s ease-in-out;
+            transition:         transform .8s ease-in-out;
+  }
+  img.spin-image:hover {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+
+#animated-img {
+    position: absolute;
+    animation: makesquare 5s infinite;
+}
+
+  
+@keyframes makesquare {
+    0% {
+        top: 0px;
+        left: 0px;
+    }
+
+    25% {
+        top: 1000px;
+        left: 0px;
+    }
+
+    50% {
+        top: 1000px;
+        left: 2000px;
+    }
+
+    75% {
+        top: 0px;
+        left: 2000px;
+    }
+
+    100% {
+        top: 0px;
+        left: 0px;
+    }
+}
+
+nav ul {
+    text-align: center;
+    list-style-type: none;
+    display: flex;
+
+    background-color: rgb(170, 119, 163);
+}
+
+nav ul li {
+    padding: 5px;
+    border-style: solid;
+    border-width: 2px;
+    margin: 5px;
+    background-color: black;
+}
+
+a {
+    all: unset
+}
